remove android module to common module add compose navigation

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,10 @@
+android.enableJetifier=true
+android.useAndroidX=true
 kotlin.code.style=official
+org.gradle.jvmargs=-Xmx3g
+kotlin.mpp.stability.nowarn=true
+kotlin.native.cacheKind=none
+kotlin.native.useEmbeddableCompilerJar=true
+kotlin.native.binary.memoryModel=experimental
+#compose.desktop.verbose=true
+#kotlin.js.webpack.major.version=4
